# flowcasepy

./: .gitignore  README.md  __pyproject.toml  __setup.py  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: docs.yml  update-requirements-and-build.yml
cvpartner/: __init__.py  cvpartner.py  employee.py  graphs.py  helpers.py  make_slides.py  reports.py
cvpartner/types/: TYPES.md  __init__.py  country.py  customer.py  cv.py  department.py  employee.py  office.py  search_result.py
docs/: cvpartner API documentation.html  cvpartner.html  flowcase.html  index.html  search.js
docs/cvpartner/: cvpartner.html  graphs.html  helpers.html  make_slides.html  reports.html  types.html
docs/cvpartner API documentation_files/: noaignitedk_logo
docs/cvpartner/types/: country.html  customer.html  cv.html  department.html  employee.html  office.html  search_result.html
flowcase/: __init__.py  flowcase.py  graphs.py  helpers.py  make_slides.py  reportmanager.py  reports.py
flowcase/types/: TYPES.md  __init__.py  cv.py  department.py  employee.py  office.py  search_result_v4.py
notebooks/: test_search.ipynb
tests/: download_test_data.py  finding_new_elements_on_cv.ipynb  test_class.py  test_cv.py  test_cvpartner.py  test_department_listings.py  test_employee.py  test_flowcase.py  test_get_proper_project_dates.py  test_helpers.py  test_integration_employees.py  test_report_year_in_review.py  test_reports.py
