[project]
name = "cvpartnerpy"
version = "0.1.0"
description = "A python package for scraping cvpartner api"
readme = {file = "README.md", content-type = "text/markdown"}
# dynamic, use requirenments.txt
dynamic = ["dependencies"]
license = { text = "All rights reserved" }
keywords = ["cvpartner", "api"]
classifiers=[
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">= 3.11"
authors = [
  {name = "Eirik Stavelin", email = "eirik.stavelin@noaignite.com"},
]


[project.urls]
Repository = "https://github.com/eiriks/cvpartnerpy"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
exclude = ["old"]

# as described here: https://packaging.python.org/en/latest/guides/modernize-setup-py-project/
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
